调整了包的位置

--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.NewsDetailActivity">
+    tools:context=".news.newsDetail.NewsDetailActivity">
 
     <ScrollView
         android:layout_width="match_parent"
