--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,43 +45,43 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <com.java.news.mybutton.MyButton
+                <com.java.news.myitems.MyButton
                     android:id="@+id/bt1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:onClick="sendMessage" />
-                <com.java.news.mybutton.MyButton
+                <com.java.news.myitems.MyButton
                     android:id="@+id/bt2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
-                <com.java.news.mybutton.MyButton
+                <com.java.news.myitems.MyButton
                     android:id="@+id/bt3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
-                <com.java.news.mybutton.MyButton
+                <com.java.news.myitems.MyButton
                     android:id="@+id/bt4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
-                <com.java.news.mybutton.MyButton
+                <com.java.news.myitems.MyButton
                     android:id="@+id/bt5"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
-                <com.java.news.mybutton.MyButton
+                <com.java.news.myitems.MyButton
                     android:id="@+id/bt6"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
-                <com.java.news.mybutton.MyButton
+                <com.java.news.myitems.MyButton
                     android:id="@+id/bt7"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
-                <com.java.news.mybutton.MyButton
+                <com.java.news.myitems.MyButton
                     android:id="@+id/bt8"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
