--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.NewsActivity">
+    tools:context=".news.newsList.NewsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,40 +36,59 @@
                 android:id="@+id/search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@android:color/white"
+                android:background="@android:color/background_light"
                 android:gravity="center"
                 android:textSize="20sp"
                 android:text="搜索" />
 
+            <ImageView
+                android:id="@+id/menu_imageView"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
+                app:srcCompat="@drawable/menu" />
+
         </LinearLayout>
 
-        <HorizontalScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="none"
-            android:overScrollMode="never"
-            >
+            android:layout_height="50dp"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+            <HorizontalScrollView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:overScrollMode="never"
+                android:scrollbars="none">
 
-                <GridView
-                    android:id="@+id/class_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:gravity="center"
-                    android:numColumns="auto_fit"
-                    android:stretchMode="spacingWidthUniform" />
-            </LinearLayout>
-        </HorizontalScrollView>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <GridView
+                        android:id="@+id/class_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:gravity="center"
+                        android:numColumns="auto_fit"
+                        android:stretchMode="spacingWidthUniform" />
+                </LinearLayout>
+            </HorizontalScrollView>
+            <ImageView
+                android:id="@+id/choose_imageView"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
+                app:srcCompat="@drawable/menu" />
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".main.NewsActivity">
+            tools:context=".news.newsList.NewsActivity">
 
-            <com.java.news.mybutton.RefreshableView
+            <com.java.news.myitems.RefreshableView
                 android:id="@+id/refreshable_view"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
@@ -78,7 +97,7 @@
                     android:id="@+id/list_view"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"></ListView>
-            </com.java.news.mybutton.RefreshableView>
+            </com.java.news.myitems.RefreshableView>
         </RelativeLayout>
     </LinearLayout>
 
