--- a/app/src/main/res/layout/pull_to_refresh.xml
+++ b/app/src/main/res/layout/pull_to_refresh.xml
@@ -19,7 +19,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/arrowdown"
                 />
             <ProgressBar
                 android:id="@+id/progress_bar"
