下拉更新，上拉加载

--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -93,16 +93,19 @@
             android:layout_height="match_parent"
             tools:context=".news.newsList.NewsActivity">
 
-            <com.java.news.myitems.RefreshableView
-                android:id="@+id/refreshable_view"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-
-                <ListView
-                    android:id="@+id/list_view"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"></ListView>
-            </com.java.news.myitems.RefreshableView>
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/swipeRefreshLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/news_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:cacheColorHint="@null"
+                    android:scrollbars="vertical" />
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
         </RelativeLayout>
     </LinearLayout>
 
