--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".news.newsList.FavoriteActivity">
+    tools:context=".favorites.FavorActivity">
 
     <ListView
         android:id="@+id/favorite_view"
