--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="news_back">#A1D3F8</color>
-    <color name="news_info">#C77404</color>
+    <color name="news_info">#000000</color>
     <color name="boarder">#000000</color>
     <color name="search">#2BB8F8</color>
     <color name="colorClass">#EDF0F0</color>
