--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -4,6 +4,9 @@
     <item android:id="@+id/option_favorite"
         android:title="我的收藏"
         app:showAsAction="never"/>
+    <item android:id="@+id/option_history"
+        android:title="历史记录"
+        app:showAsAction="never"/>
     <item android:id="@+id/option_setting"
         android:title="设置"
         app:showAsAction="never"/>
