--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="news_back">#A1D3F8</color>
     <color name="news_info">#000000</color>
     <color name="boarder">#000000</color>
-    <color name="search">#2BB8F8</color>
+    <color name="TetleBar">#2BB8F8</color>
     <color name="colorClass">#EDF0F0</color>
     <color name="colorClassChoose">#FF0000</color>
     <color name="colorClassNotChoose">#000000</color>
