--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -11,6 +11,23 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/TetleBar"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="浏览历史"
+                android:layout_marginStart="20dp"
+                android:textSize="24sp" />
+
+        </LinearLayout>
+
         <ListView
             android:id="@+id/history_view"
             android:layout_width="match_parent"
