--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,8 +7,8 @@
     <color name="news_info">#000000</color>
     <color name="boarder">#000000</color>
 
-    <color name="TetleBar">#2BB8F8</color>
-    <color name="TitleText">#000000</color>
+    <color name="TetleBar">#0C554E</color>
+    <color name="TitleText">#FFFFFF</color>
 
     <color name="colorClass">#EDF0F0</color>
     <color name="colorClassChoose">#FF0000</color>
