--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -23,6 +23,7 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="浏览历史"
+                android:textColor="@color/TitleText"
                 android:layout_marginStart="20dp"
                 android:textSize="24sp" />
 
