--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -24,6 +24,7 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="新闻"
+                android:textColor="@color/TitleText"
                 android:layout_marginStart="20dp"
                 android:textSize="24sp" />
 
